--- a/medpack.html
+++ b/medpack.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<html>
+<body>
 <table cellpadding="0" cellspacing="0" class="sc-gPEVay eQYmiW" style="vertical-align: -webkit-baseline-middle; font-size: small; font-family: Arial;">
 	<tbody>
 		<tr>
@@ -167,3 +170,5 @@
 							</tr>
 						</tbody>
 					</table>
+</body>
+</html>
