--- a/medpack.html
+++ b/medpack.html
@@ -1,174 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-<table cellpadding="0" cellspacing="0" class="sc-gPEVay eQYmiW" style="vertical-align: -webkit-baseline-middle; font-size: small; font-family: Arial;">
-	<tbody>
-		<tr>
-			<td>
-				<table cellpadding="0" cellspacing="0" class="sc-gPEVay eQYmiW" style="vertical-align: -webkit-baseline-middle; font-size: small; font-family: Arial;">
-					<tbody>
-						<tr>
-							<td style="vertical-align: top;">
-								<table cellpadding="0" cellspacing="0" class="sc-gPEVay eQYmiW" style="vertical-align: -webkit-baseline-middle; font-size: small; font-family: Arial;">
-									<tbody>
-										<tr>
-											<td class="sc-TOsTZ kjYrri" style="text-align: center;">
-												<img src="https://www.dropbox.com/s/7k9oy88amn4wuj9/86352135_2928803180517396_7765705624591007744_o%201.png?raw=1" role="presentation" width="130" class="sc-cHGsZl bHiaRe" style="max-width: 130px; display: block;">
-												</td>
-											</tr>
-										</tbody>
-									</table>
-								</td>
-								<td width="46">
-									<div></div>
-								</td>
-								<td style="padding: 0px; vertical-align: middle;">
-									<h3 color="#36364f" class="sc-fBuWsC eeihxG" style="margin: 0px; font-size: 16px; color: rgb(54, 54, 79);">
-										<span>Dmitrenko&nbsp;Ruslan</span>
-									</h3>
-									<p color="#36364f" font-size="small" class="sc-fMiknA bxZCMx" style="margin: 0px; color: rgb(54, 54, 79); font-size: 12px; line-height: 20px;">
-										<span>Brand&nbsp;Manager</span>
-									</p>
-									<p color="#36364f" font-size="small" class="sc-dVhcbM fghLuF" style="margin: 0px; font-weight: 500; color: rgb(54, 54, 79); font-size: 12px; line-height: 20px;">
-										<span>Medpack Swiss Group</span>
-									</p>
-									<table cellpadding="0" cellspacing="0" class="sc-gPEVay eQYmiW" style="vertical-align: -webkit-baseline-middle; font-size: small; font-family: Arial; width: 100%;">
-										<tbody>
-											<tr>
-												<td height="30"></td>
-											</tr>
-											<tr>
-												<td color="#e92227" direction="horizontal" height="1" class="sc-jhAzac hmXDXQ" style="width: 100%; border-bottom-width: 1px; border-bottom-style: solid; border-bottom-color: rgb(233, 34, 39); border-left-style: none; display: block;"></td>
-											</tr>
-											<tr>
-												<td height="30"></td>
-											</tr>
-										</tbody>
-									</table>
-									<table cellpadding="0" cellspacing="0" class="sc-gPEVay eQYmiW" style="vertical-align: -webkit-baseline-middle; font-size: small; font-family: Arial;">
-										<tbody>
-
-                       <tr height="25" style="vertical-align: middle;">
-												<td width="30" style="vertical-align: middle;">
-													<table cellpadding="0" cellspacing="0" class="sc-gPEVay eQYmiW" style="vertical-align: -webkit-baseline-middle; font-size: small; font-family: Arial;">
-														<tbody>
-															<tr>
-																<td style="vertical-align: bottom;">
-																	<span width="11" style="display: block;">
-																		<img src="https://www.dropbox.com/s/y85a1ujy6f1k9yq/Line.png?raw=1" width="13" style="display: block;">
-																	</span>
-																</td>
-															</tr>
-														</tbody>
-													</table>
-												</td>
-													<td style="padding: 0px;">
-														<span style="color: #36364f; font-size: 12px;">mobile: +380 66 589 39 49</span>
-														<!-- <a href="tel:+380 67 612 52 29" color="#36364f" class="sc-gipzik iyhjGb" style="text-decoration: none; color: rgb(54, 54, 79); font-size: 12px;">
-															<span style="color=#36364f; font-size: 12px;">office: +41 71 855 07 55</span>
-														</a> -->
-													</td>
-												</tr>
-
-                        <tr height="25" style="vertical-align: middle;">
- 												<td width="30" style="vertical-align: middle;">
- 													<table cellpadding="0" cellspacing="0" class="sc-gPEVay eQYmiW" style="vertical-align: -webkit-baseline-middle; font-size: small; font-family: Arial;">
- 														<tbody>
- 															<tr>
- 																<td style="vertical-align: bottom;">
- 																	<span width="11" style="display: block;">
- 																		<img src="https://www.dropbox.com/s/0zbu4z2n0t48azp/Line.png?raw=1" width="13" style="display: block;">
- 																	</span>
- 																</td>
- 															</tr>
- 														</tbody>
- 													</table>
- 												</td>
- 													<td style="padding: 0px;">
-														<span style="color: #36364f; font-size: 12px;">office: +41 71 855 07 55</span>
- 														<!-- <a href="tel:+380 67 612 52 29" color="#36364f" class="sc-gipzik iyhjGb" style="text-decoration: none; color: rgb(54, 54, 79); font-size: 12px;">
- 															<span style="color=#36364f; font-size: 12px;">mobile: +380 67 612 52 29</span>
- 														</a> -->
- 													</td>
- 												</tr>
-
-                        <tr height="25" style="vertical-align: middle;">
-													<td width="30" style="vertical-align: middle;">
-														<table cellpadding="0" cellspacing="0" class="sc-gPEVay eQYmiW" style="vertical-align: -webkit-baseline-middle; font-size: small; font-family: Arial;">
-															<tbody>
-																<tr>
-																	<td style="vertical-align: bottom;">
-																		<span width="11" style="display: block;">
-																			<img src="https://www.dropbox.com/s/5kr3s1lqid8u85m/Line.png?raw=1" width="13" style="display: block;">
-																		</span>
-																	</td>
-																</tr>
-															</tbody>
-														</table>
-													</td>
-														<td style="padding: 0px;">
-															<span style="color: #36364f; font-size: 12px; text-decoration: none;">dmitrenko@medpack-swiss.com</span>
-															<!-- <a href="mailto:yakovlev@medpack-swiss.com" color="#36364f" class="sc-gipzik iyhjGb" style="text-decoration: none; color: rgb(54, 54, 79); font-size: 12px;">
-																<span style="color=#36364f; font-size: 12px;">yakovlev@medpack-swiss.com</span>
-															</a> -->
-														</td>
-													</tr>
-													<tr height="25" style="vertical-align: middle;">
-														<td width="30" style="vertical-align: middle;">
-															<table cellpadding="0" cellspacing="0" class="sc-gPEVay eQYmiW" style="vertical-align: -webkit-baseline-middle; font-size: small; font-family: Arial;">
-																<tbody>
-																	<tr>
-																		<td style="vertical-align: bottom;">
-																			<span width="11" style="display: block;">
-																				<img src="https://www.dropbox.com/s/zk8i2ehg57s6228/Line.png?raw=1" width="13" style="display: block;">
-																				</span>
-																			</td>
-																		</tr>
-																	</tbody>
-																</table>
-															</td>
-															<td style="padding: 0px;">
-																<a href="//medpack-group.com" color="#36364f" class="sc-gipzik iyhjGb" style="text-decoration: none; color: rgb(54, 54, 79); font-size: 12px;">
-																	<span>medpack-group.com</span>
-																</a>
-															</td>
-														</tr>
-														<tr height="25" style="vertical-align: middle;">
-															<td width="30" style="vertical-align: middle;">
-																<table cellpadding="0" cellspacing="0" class="sc-gPEVay eQYmiW" style="vertical-align: -webkit-baseline-middle; font-size: small; font-family: Arial;">
-																	<tbody>
-																		<tr>
-																			<td style="vertical-align: bottom;">
-																				<span width="11" style="display: block;">
-																					<img src="https://www.dropbox.com/s/luozxzc67splbmp/Line.png?raw=1" width="13" style="display: block;">
-																					</span>
-																				</td>
-																			</tr>
-																		</tbody>
-																	</table>
-																</td>
-																<td style="padding: 0px;">
-																	<span color="#36364f" class="sc-csuQGl CQhxV" style="font-size: 12px; color: rgb(54, 54, 79);">
-																		<span>6 Seepark, CH-9422, Staad SG, Switzerland</span>
-																	</span>
-																</td>
-															</tr>
-														</tbody>
-													</table>
-													<table cellpadding="0" cellspacing="0" class="sc-gPEVay eQYmiW" style="vertical-align: -webkit-baseline-middle; font-size: small; font-family: Arial;">
-														<tbody>
-															<tr>
-																<td height="30"></td>
-															</tr>
-														</tbody>
-													</table>
-												</td>
-											</tr>
-										</tbody>
-									</table>
-								</td>
-							</tr>
-						</tbody>
-					</table>
+<div><style>.sh-src a{text-decoration:none!important;}</style></div> <br> <table cellpadding="0" cellspacing="0" border="0" class="sh-src" style="margin: 0px; border-collapse: collapse;"><tr><td style="padding: 0px 1px 0px 0px;"><table cellpadding="0" cellspacing="0" border="0" style="border-collapse: separate; margin: 0px;"><tr><td valign="middle" align="center" style="padding: 0px 28px 0px 0px; vertical-align: middle;"><!----> <table cellpadding="0" cellspacing="0" border="0" style="margin: 0px; border-collapse: collapse;"><tr><td style="padding: 0px 1px 0px 0px;"><p style="margin: 1px;"><a href="https://global-swiss.ch/?utm_source=Email&amp;utm_medium=Signature" target="_blank"><img src="https://signaturehound.com/api/v1/file/l7ddnkl9few6b" alt="" title="Logo" width="120" height="120" style="display: block; border: 0px; max-width: 120px;"></a></p></td></tr></table></td> <td style="padding: 1px 0px 0px; border-right-width: 1px; border-right-style: solid; border-right-color: rgb(201,33,40);"></td> <td valign="middle" style="padding: 0px 1px 0px 28px; vertical-align: middle;"><table cellpadding="0" cellspacing="0" border="0" style="margin: 0px; border-collapse: collapse;"><tr><td style="padding: 0px 1px 16px 0px; font-family: Verdana, Geneva, sans-serif; font-size: 12px; line-height: 18px; white-space: nowrap;"><p style="font-family: Verdana, Geneva, sans-serif; font-size: 12px; line-height: 18px; font-weight: 700; color: rgb(0,0,0); white-space: nowrap; margin: 1px;">Sunnie Dog</p> <p style="font-family: Verdana, Geneva, sans-serif; font-size: 12px; line-height: 18px; white-space: nowrap; color: rgb(86,88,90); margin: 1px;">Chief of Fetch</p> <!----> <p style="font-family: Verdana, Geneva, sans-serif; font-size: 12px; line-height: 18px; white-space: nowrap; color: rgb(86,88,90); margin: 1px;">Global Swiss Group</p></td></tr> <tr><td style="padding: 0px 1px 0px 0px;"><table cellpadding="0" cellspacing="0" border="0" style="margin: 0px; border-collapse: collapse;"><tr><td valign="middle" style="padding: 1px 5px 1px 0px; vertical-align: middle;"><p style="margin: 1px;"><img src="https://signaturehound.com/api/v1/png/email/default/c92128.png" alt="" width="16" height="16" style="display: block; border: 0px; max-width: 16px;"></p></td> <td style="font-family: Verdana, Geneva, sans-serif; font-size: 12px; line-height: 18px; white-space: nowrap; color: rgb(86,88,89) !important; padding: 1px 0px; vertical-align: middle;"><p style="margin: 1px;"><a href="mailto:sunnie@global-swiss.ch" target="_blank" style="font-family: Verdana, Geneva, sans-serif; font-size: 12px; line-height: 18px; white-space: nowrap; color: rgb(86,88,90); text-decoration: none !important;"><span style="font-family: Verdana, Geneva, sans-serif; font-size: 12px; line-height: 18px; white-space: nowrap; color: rgb(86,88,90); text-decoration: none !important;">sunnie@global-swiss.ch</span></a></p></td></tr> <tr><td valign="middle" style="padding: 1px 5px 1px 0px; vertical-align: middle;"><p style="margin: 1px;"><img src="https://signaturehound.com/api/v1/png/mobile/default/c92128.png" alt="" width="16" height="16" style="display: block; border: 0px; max-width: 16px;"></p></td> <td style="font-family: Verdana, Geneva, sans-serif; font-size: 12px; line-height: 18px; white-space: nowrap; color: rgb(86,88,89) !important; padding: 1px 0px; vertical-align: middle;"><p style="margin: 1px;"><a href="tel:+41711234567" target="_blank" style="font-family: Verdana, Geneva, sans-serif; font-size: 12px; line-height: 18px; white-space: nowrap; color: rgb(86,88,90); text-decoration: none !important;"><span style="font-family: Verdana, Geneva, sans-serif; font-size: 12px; line-height: 18px; white-space: nowrap; color: rgb(86,88,90); text-decoration: none !important;">+41 71 1234567</span></a></p></td></tr><!----><!----><tr><td valign="middle" style="padding: 1px 5px 1px 0px; vertical-align: middle;"><p style="margin: 1px;"><img src="https://signaturehound.com/api/v1/png/phone/default/c92128.png" alt="" width="16" height="16" style="display: block; border: 0px; max-width: 16px;"></p></td> <td style="font-family: Verdana, Geneva, sans-serif; font-size: 12px; line-height: 18px; white-space: nowrap; color: rgb(86,88,89) !important; padding: 1px 0px; vertical-align: middle;"><p style="margin: 1px;"><a href="tel:+41718550755" target="_blank" style="font-family: Verdana, Geneva, sans-serif; font-size: 12px; line-height: 18px; white-space: nowrap; color: rgb(86,88,90); text-decoration: none !important;"><span style="font-family: Verdana, Geneva, sans-serif; font-size: 12px; line-height: 18px; white-space: nowrap; color: rgb(86,88,90); text-decoration: none !important;">+41 71 8550755</span></a></p></td></tr> <tr><td valign="top" style="padding: 2px 5px 1px 0px; vertical-align: top;"><p style="margin: 1px;"><img src="https://signaturehound.com/api/v1/png/map/default/c92128.png" alt="" width="16" height="16" style="display: block; border: 0px; max-width: 16px;"></p></td> <td style="font-family: Verdana, Geneva, sans-serif; font-size: 12px; line-height: 18px; white-space: nowrap; color: rgb(86,88,89) !important; padding: 1px 0px; vertical-align: middle;"><p style="margin: 1px;"><a href="https://gsg.ink/location" target="_blank" style="font-family: Verdana, Geneva, sans-serif; font-size: 12px; line-height: 18px; white-space: nowrap; color: rgb(86,88,90); text-decoration: none !important;"><span style="font-family: Verdana, Geneva, sans-serif; font-size: 12px; line-height: 18px; white-space: nowrap; color: rgb(86,88,90); text-decoration: none !important;">Black Office, Unterlettenstrasse 14<br>9443 Widnau, Switzerland</span></a></p></td></tr> <tr><td valign="middle" style="padding: 1px 5px 1px 0px; vertical-align: middle;"><p style="margin: 1px;"><img src="https://signaturehound.com/api/v1/png/website/default/c92128.png" alt="" width="16" height="16" style="display: block; border: 0px; max-width: 16px;"></p></td> <td style="font-family: Verdana, Geneva, sans-serif; font-size: 12px; line-height: 18px; white-space: nowrap; color: rgb(201,33,39) !important; font-weight: 700; padding: 1px 0px; vertical-align: middle;"><p style="margin: 1px;"><a href="https://global-swiss.ch/?utm_source=Email&amp;utm_medium=Signature" target="_blank" style="font-family: Verdana, Geneva, sans-serif; font-size: 12px; line-height: 18px; white-space: nowrap; color: rgb(201,33,40); font-weight: 700; text-decoration: none !important;"><span style="font-family: Verdana, Geneva, sans-serif; font-size: 12px; line-height: 18px; white-space: nowrap; color: rgb(201,33,40); font-weight: 700; text-decoration: none !important;">global-swiss.ch</span></a></p></td></tr></table></td></tr> <tr><td style="padding: 0px 1px 0px 0px;"><table cellpadding="0" cellspacing="0" border="0" style="margin: 0px; border-collapse: collapse;"><tr><td width="32" style="font-size: 0px; line-height: 0px; padding: 20px 1px 0px 0px;"><p style="margin: 1px;"><a href="https://gsg.ink/linkedin" target="_blank"><img src="https://signaturehound.com/api/v1/png/linkedin/round/c92128.png" alt="" width="32" height="32" style="display: block; border: 0px; max-width: 32px;"></a></p></td> <td width="3" style="padding: 0px 0px 1px;"></td><td width="32" style="font-size: 0px; line-height: 0px; padding: 20px 1px 0px 0px;"><p style="margin: 1px;"><a href="https://gsg.ink/facebook" target="_blank"><img src="https://signaturehound.com/api/v1/png/facebook/round/c92128.png" alt="" width="32" height="32" style="display: block; border: 0px; max-width: 32px;"></a></p></td> <td width="3" style="padding: 0px 0px 1px;"></td><td width="32" style="font-size: 0px; line-height: 0px; padding: 20px 1px 0px 0px;"><p style="margin: 1px;"><a href="https://gsg.ink/youtube" target="_blank"><img src="https://signaturehound.com/api/v1/png/youtube/round/c92128.png" alt="" width="32" height="32" style="display: block; border: 0px; max-width: 32px;"></a></p></td> <td width="3" style="padding: 0px 0px 1px;"></td></tr></table></td></tr></table></td></tr></table></td></tr> <!----> <!----> <!----> <tr><td style="padding: 0px 1px 0px 0px;">
+  &nbsp;
+</td></tr></table>
 </body>
 </html>
